[package]
name = "buildkit-proto"
version = "0.2.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2021"

description = "Protobuf interfaces to BuildKit"
documentation = "https://docs.rs/buildkit-proto"
repository = "https://github.com/denzp/rust-buildkit"
readme = "README.md"
keywords = ["buildkit", "docker", "protobuf", "prost"]
categories = ["development-tools::build-utils", "api-bindings"]
license = "MIT/Apache-2.0"

[dependencies]
prost = "0.12.6"
prost-types = "0.12.6"
tonic = "0.11.0"

[build-dependencies.tonic-build]
version = "0.11.0"
default-features = false
features = ["default", "prost", "prost-build"]
